--- a/composer.json
+++ b/composer.json
@@ -5,23 +5,24 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^8.1",
-        "jenssegers/mongodb": "^4.0",
-        "laravel/lumen-framework": "^10.0",
+        "php": "^8.0",
+        "flipbox/lumen-generator": "^9.2",
+        "jenssegers/mongodb": "3.9.0",
+        "laravel/lumen-framework": "^9.0",
         "maxsky/lumen-app-key-generator": "^1.0",
-        "mongodb/mongodb": "^1.16"
+        "mongodb/mongodb": "^1.12",
+        "tymon/jwt-auth": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.4.4",
-        "phpunit/phpunit": "^10.0"
+        "phpunit/phpunit": "^9.5.10"
     },
     "autoload": {
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/",
-            "Jenssegers\\Mongodb\\": "vendor/jessegers/mongodb/src"
+            "Database\\Seeders\\": "database/seeders/"
         }
     },
     "autoload-dev": {
@@ -39,6 +40,6 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
