--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/lumen-framework": "^9.0",
         "maxsky/lumen-app-key-generator": "^1.0",
         "mongodb/mongodb": "^1.12",
+        "php-amqplib/php-amqplib": "^3.5",
         "tymon/jwt-auth": "*"
     },
     "require-dev": {
